--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router-dom": "^6.4.3",
     "react-select": "^5.7.0",
     "react-table": "^7.8.0",
+    "react-tabs": "^6.0.2",
     "react-tailwindcss-datepicker": "^1.4.2",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
@@ -70,5 +71,4 @@
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   }
-   
 }
