--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/interaction": "^6.1.4",
@@ -18,6 +19,7 @@
     "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
     "@iconify/react": "^4.0.0",
+    "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@south-paw/react-vector-maps": "^3.2.0",
@@ -26,6 +28,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "apexcharts": "^3.36.3",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.2.0",
     "cleave.js": "^1.6.0",
     "d3-array": "^3.2.2",
@@ -38,6 +41,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.10.5",
     "react-calendar": "^4.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-collapse": "^5.1.1",
