--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "vite --port 4200",
     "build": "vite build",
     "preview": "vite preview"
-  }, 
+  },
   "dependencies": {
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/interaction": "^6.1.4",
@@ -19,7 +20,8 @@
     "@headlessui/react": "^1.7.4",
     "@hookform/resolvers": "^2.9.10",
     "@iconify/react": "^4.0.0",
-    "@mui/material": "^6.1.6",
+    "@mui/material": "^6.1.9",
+    "@mui/x-date-pickers": "^7.23.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@south-paw/react-vector-maps": "^3.2.0",
@@ -65,6 +67,7 @@
     "sort-by": "^1.2.0",
     "swiper": "^8.4.5",
     "uuidv4": "^6.2.13",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
