--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@iconify/react": "^4.0.0",
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^7.23.0",
+    "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^1.9.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@south-paw/react-vector-maps": "^3.2.0",
     "@svg-maps/world": "^1.0.1",
     "@tippyjs/react": "^4.2.6",
+    "@vis.gl/react-google-maps": "^1.5.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "apexcharts": "^3.36.3",
     "axios": "^1.7.2",
@@ -37,6 +39,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.7",
     "framer-motion": "^10.12.12",
+    "google-map-react": "^2.2.1",
     "leaflet": "^1.9.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -66,6 +69,7 @@
     "simplebar-react": "^2.4.3",
     "sort-by": "^1.2.0",
     "swiper": "^8.4.5",
+    "use-places-autocomplete": "^4.0.1",
     "uuidv4": "^6.2.13",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
